Attempt to fix backround on mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed; /* Optional: keeps the background fixed when scrolling */
+  background-attachment: scroll; /* Optional: keeps the background fixed when scrolling */
   margin: 0;
   padding: 0;
   background-image: url(./assets/background.jpg);
